# WebODF

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  CodingStandards.md  ISSUES.txt  JSCoverage.patch  LICENSE  LicenseHeaderTemplate.js  README-Building.md  README-Products.md  README-Windows.md  README.md  README.txt  packwebodf.js  requirements-xml-editor.txt
attic/programs/nativeQtClient/: CMakeLists.txt  odfview.cpp
programs/: CMakeLists.txt
programs/android/: .project  AndroidManifest.xml  CMakeLists.txt  build.xml
programs/android/assets/: odf.html  odf.js  webodf.css  webodf.js
programs/benchmark/: 100pages.odt  1page.odt  CMakeLists.txt  index.html  runner.css  src-index.html  webodf.js
programs/benchmark/js/: AlignCurrentSelectionJustified.js  Benchmark.js  BenchmarkAction.js  BoldCurrentSelection.js  EnterEditMode.js  HTMLActionResult.js  HTMLBenchmark.js  HTMLResultsRenderer.js  InsertLetterA.js  LoadDocument.js  ManualStep.js  MoveCursor1StepLeft.js  MoveCursorLeft.js  MoveCursorToEnd.js  MoveCursorToEndDirect.js  MoveCursorToEndViaCtrlEnd.js  MoveCursorToStart.js  OdfBenchmarkContext.js  OpenDocument.js  PreloadDocument.js  RangeCalculator.js  Remove1Position.js  RemoveCurrentSelection.js  RemovePositions.js  SaveDocument.js  SelectEntireDocument.js
programs/benchmarking/: 1000pages.odt  10pages.odt  src-index.html
programs/benchmarking/js/: Benchmark.js  BenchmarkAction.js  EnterEditMode.js  HTMLResultsRenderer.js  ManualStep.js  MoveCursorToEndDirect.js  Remove1Position.js  RemoveCurrentSelection.js  main.js  require.js
programs/cordova/: CMakeLists.txt  compile.sh  config.xml  config.xml.in  createIcons.sh  externs.js  manifest.webapp.in
programs/cordova/www/: FileScanner.js  OdfViewer.js  compile.sh  index.html  index.js  viewer.css
programs/docnosis/: docnosis.js  index.html
programs/editor/: CMakeLists.txt  Editor.js  EditorSession.js  HOWTO-wodotexteditor.md  MemberList.js  MemberListView.js  README.md  SessionBackend.js  SessionList.js  SessionListView.js  Tools.js  Translator.js  UserList.js  avatars.js  bella.js  bellaplugin.js  boot_editor.js  cdn-index.html  collab-index.html  collabeditor.html  collabeditor.js  editor.css  editor.js  getin.js  index.html  localeditor.html  localeditor.js  localfileeditor.js  pullboxeditor.js  revieweditor.html  revieweditor.js  splitscreeneditor.css  splitscreeneditor.html  splitscreeneditor.js  src-bella.html  src-collabeditor.html  src-localeditor.html  src-revieweditor.html  src-splitscreeneditor.html  texteditor.html  (+7 more)
programs/editor/backend/: ServerFactory.js
programs/editor/dojo-deps/: build.sh
programs/editor/libexec/: mergeIntoDojo.js
programs/editor/nls/: myResources.js
programs/editor/server/: Server.js  ServerFactory.js
programs/editor/translations/: de-DE.json  eu.json  nl-NL.json
programs/editor/widgets/: aboutDialog.js  annotation.js  characterStylesDialog.js  editHyperlinks.js  fontPicker.js  imageInserter.js  loadWidgets.js  paragraphAlignment.js  paragraphStyles.js  paragraphStylesDialog.js  paragraphStylesList.js  paragraphStylesModifiable.js  simpleStyles.js  undoRedoMenu.js  zoomSlider.js
programs/firefoxextension/: CMakeLists.txt  bootstrap.js  chrome.manifest  install.rdf  install.rdf.in  makeViewerHtml.js  packextension.js
programs/firefoxextension/components/: OdfStreamConverter.js  odfContentHandler.js
programs/firefoxextension/content/: odf.html
programs/ios/: welcome.odt
programs/nativeQtClient/: CMakeLists.txt  application.qrc  main.cpp  mainwindow.cpp  nativeQtClient.pro  odf.cpp  odf.h  odfcontainer.cpp  odfnetworkaccessmanager.h  odftohtmlconverter.cpp  odftohtmlconverter.h  odfview.cpp  odfview.h  scripts.js  zipnetworkreply.cpp  zipnetworkreply.h
programs/playbook/: build_sign.bat  index.html  scripts.js
programs/qtjsruntime/: CMakeLists.txt  nam.h  nativeio.cpp  nativeio.h  pagerunner.cpp  pagerunner.h  qtjsruntime.cpp  qtjsruntime.pro
programs/touchui/: CMakeLists.txt  index.html  scripts.js  sencha-touch.css  sencha-touch.js
programs/viewer/: CMakeLists.txt  ODFViewerPlugin.css  ODFViewerPlugin.js  PluginLoader.js  README-viewer.odt  index-amalgamation-template.html  index.html  viewer.css  viewer.js  webodf.js
programs/wordpressplugin/: CMakeLists.txt  readme.txt  webodf-viewer.php
programs/xmleditor/: meeting.xml  meeting.xsd  xmleditor.html
webodf/: CMakeLists.txt  EditingNotes.md  Makefile  README  README_clipboard.txt  README_constraints.md  README_copypaste.md  README_cursorpositions.txt  README_inputmethods.md  README_operationaltransforms.md  README_styleSaving.txt  application.qrc  base64.js  bytearray.js  collaborate.xml  compare.js  defaultodfstyle.css  externs.js  filelist.js  filelister.js  gui.js  httpserver.js  index.html  lighttpd.conf  loadodf.js  odf.html  odf.js  odfedit.html  odfedit.js  opxml.css  qtodf.js  rawinflate.js  relaxngToCPP.js  roundtripodf.js  roundtripzip.js  style2css.js  styleNameRef  test.html  test.js  testrelaxng.js  (+8 more)
webodf/collabtest/: test.html  test.js  text.odt
webodf/externs/: JSZip.js
webodf/flashput/: test.html
webodf/lib/: HeaderCompiled.js  browser.js  export.js  manifest.js  manifest.json  packages.js  require.js  runtime.js
webodf/lib/core/: Async.js  (+38 more)
webodf/misctests/: clientrectsrounding.html  clipboard.html  directformatting.html  getelementsperf.html  ie-compatibility.html  imedemo.html  selection.html  testzip.js  zoomtest.html
webodf/relaxngtests/: test01.xml  test02.xml  test04.rng  test10.rng  test10.xml  test11.rng  test16.rng  test21.rng  test21.xml
webodf/tests/: CMakeLists.txt  README  manifest.js  manifest.json  test.odt  testruntimeadaption.js  tests.html  tests.js  utf8.txt  visual-tests.fodt
webodf/tools/: checkCollaborationObject.js  css2js.js  dojoNlsCompile.js  externs.js  extjsexterns.js  fixLicenses.py  karma.conf.js  manifest.js  odf-pack.sh  odf2pdf.js  odfRng2Config.js  replaceByFileContents.js  runjslint.js  set_IS_COMPILED_CODE.cmake  touchfile.js  updateJS.js  zipdir.js  zipper.js
webodf/xmledit/: gui.js  index.html
(+448 files in other folders)
